--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,14 +4,5 @@
 @import "{{ site.theme }}";
 
 body {
-    font-family: Verdana, sans-serif;
-}
-
-h1 {
-    color: blue;
-}
-
-p {
-    font-size: 16px;
-    line-height: 1.6;
+  transition: all 0.3s ease 0s;
 }
